--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "version": "2.1",
+    "version": "2.2",
     "name": "Nord Snow",
     "theme": {
         "colors": {
@@ -35,7 +35,7 @@
             "toolbar_field_highlight_text": "#eceff4",
             "toolbar_field_text": "#3b4252",
             "toolbar_field_text_focus": "#2e3440",
-            "toolbar_top_separator": "#2e3440",
+            "toolbar_top_separator": "transparent",
             "toolbar_vertical_separator": "#e5e9f0"
         }
     }
